# mcp-magnet

./: .gitignore  Cargo.toml  README.md  README_ja.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.tsr.json
.github/workflows/: ci.yml  release.yml  update-manifest.yml
dialog/: DeepLinkDialog.tsx  UrlHandler.tsx  dialogService.tsx  githubKeysFetcher.ts  githubSignatureVerifier.ts  index.ts  package.json  platform.tsx  shellExecutor.tsx
dialog/installerConfig/: context.tsx  hooks.ts  index.ts  service.ts
dialog/mcpConfigManager/: context.tsx  envConfigUtils.ts  hooks.ts  index.ts  manager.ts
dialog/runtime/: index.ts  runtime.ts  utils.ts
dialog/runtimes/: DenoRuntime.test.ts  DenoRuntime.ts  NodeRuntime.ts  PythonRuntime.ts  index.tsx
dialog/steps/: index.ts
gateway/: index.html  package.json  wrangler.toml
misc/: example-links.ts
misc/poc/: github-key-verifier.test.ts  github-key-verifier.ts  sshsig-bug-reproduction.ts  sshsig-fix.test.ts  sshsig-fix.ts  verify-hypothesis.ts  verify-signature.test.ts  verify-signature.ts
misc/vscode-to-magnet-link/: index.js
playground/: .gitignore  README.md  next.config.ts  package.json  playground.html  wrangler.toml
playground/app/: actions.ts  layout.tsx  page.tsx  playground.css  playground.tsx
playground/features/: ThemeContainer.tsx
playground/providers/: dialogService.tsx  githubKeysFetcher.server.tsx  githubKeysFetcher.tsx  githubSignatureVerifier.tsx  installerConfig.tsx  mcpConfigManagers.tsx
shell-commands/: Cargo.toml  commands.json  index.ts  package.json
shell-commands/src/: lib.rs
sig-verify/: Cargo.toml  index.html  package.json
sig-verify/src/: lib.rs
styles/: app.css  components.css  global.css  package.json  variables.css
tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri/capabilities/: default.json
tauri/src/: commands.rs  lib.rs  main.rs
ui/: deeplink-tester.html  dialog-window.html  index.html  package.json  pnpm-lock.yaml  shell-command-example.html  tsconfig.json  util.ts  vite.config.ts
ui/entrypoints/: deeplink-tester.tsx  main.tsx  (+2 more)
(+45 files in other folders)
