[package]
name    = "mcp-magnet-sig-verify"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]   # ← tests が rlib を見る

[dependencies]
anyhow = "1.0.98"
armor = "1.2.0"
wasm-bindgen = "0.2.100"        # 最新 0.2.x 系 :contentReference[oaicite:2]{index=2}

[dependencies.sequoia-openpgp]
version = "2.0.0"
default-features = false
features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"]

[dependencies.ssh-key]
version = "0.6.7"
default-features = false
features = ["alloc", "ed25519", "p256", "rsa"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"      # ← features 行を削除。最新版を明示 :contentReference[oaicite:5]{index=5}
serde_json        = "1"
env_logger = "0.11"
log        = "0.4"
