[package]
name = "mcp-magnet"
version = "0.1.0"
description = "A Tauri App"
authors = ["acomagu@gmail.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mcp_magnet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
urlencoding = "2" # Added for URL encoding
tauri-plugin-shell = "2"
tauri-plugin-log = "2"
tokio = { version = "1.44.2", features = ["io-util", "rt"] }
mcp-magnet-shell-commands = { path = "../shell-commands" }
mcp-magnet-sig-verify = { path = "../sig-verify" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

